[tool.poetry]
name = "cs-templates"
version = "0.1.0"
description = ""
authors = ["Nathan Nowack <nate@prefect.io>"]

[tool.poetry.dependencies]
python = "^3.7"
prefect = "^0.15.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
