[tool.poetry]
name = "s3-monorepo"
version = "0.1.0"
description = "Templates for prefect flows using S3 storage"
authors = ["Nathan Nowack"]

[tool.poetry.dependencies]
python = "^3.7"
prefect = "^0.15.7"
pydantic = "^1.8.2"
install = "^1.3.4"
docker = "^5.0.3"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
