[tool.poetry]
name = "flow-starter-lambda"
version = "0.1.0"
description = ""
authors = ["Nathan Nowack <nate@prefect.io>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.18.24"
jsonschema = "^3.2.0"
prefect = "^0.15.4"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
