[tool.poetry]
name = "rerun-models-from-failure"
version = "0.1.0"
description = ""
authors = ["Alexander Streed <alex.s@prefect.io>"]

[tool.poetry.dependencies]
python = "^3.8"
prefect = "^1.2.0"
dbt-core = "^1.0.4"
dbt-postgres = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
